--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "sitemap-generator": "^8.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
